--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">Lai<span class="text-primary">la</span>tul</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -20,6 +20,21 @@
             </ul>
         </nav>
     </header>
+    <body>
+        <nav>
+
+        </nav>
+        <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi, I am</h3>
+            <h1>Kazi Lailatul Islam</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-picture" src="images/hardy.png" alt="">
+        </div>
+    </body>
     <main>
 
     </main>
